# Music-Workshop

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run.bat
music_workshop/: __init__.py  app.py
music_workshop/ai/: client.py  harmony.py  melody.py
music_workshop/audio/: engine.py  envelope.py  mixer.py  voice.py
music_workshop/audio/effects/: base.py  chorus.py  reverb.py
music_workshop/audio/synths/: additive.py  base.py  fm.py  karplus_strong.py  modal.py
music_workshop/input/: keyboard_mapper.py  quantizer.py  recorder.py
music_workshop/instruments/: presets.py  registry.py
music_workshop/resources/: vexflow_renderer.html
music_workshop/score/: export.py  importer.py  project.py  score_manager.py  undo_manager.py
music_workshop/ui/: ai_panel.py  instrument_panel.py  main_window.py  notation_view.py  piano_widget.py  transport_bar.py  waveform_widget.py
tools/: waveform_viewer.py
