[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-workshop"
version = "0.1.0"
description = "AI-assisted music composition desktop application"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.26",
    "sounddevice>=0.4",
    "music21>=9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
